--- a/ICD/Lista 0/2017015002/ICD20191-Lista00/Lista00.ipynb
+++ b/ICD/Lista 0/2017015002/ICD20191-Lista00/Lista00.ipynb
@@ -26,7 +26,7 @@
     "deletable": false,
     "editable": false,
     "nbgrader": {
-     "checksum": "e2c0b46fb6f527d7db81c8b9f42c50ac",
+     "checksum": "e5ed2cbb0865fedfd38ef48f3a4fd69d",
      "grade": false,
      "grade_id": "cell1c-a00",
      "locked": true,
@@ -37,7 +37,7 @@
    "source": [
     "# Exercício 01:\n",
     "\n",
-    "Crie uma função que, dado dois textos, retorne uma __lista__ (que pode ser vazia) em ordem lexicográfica com as palavras que ocorrem em ambos. A função não deve ser case sensitive, nesse caso, transforme todo o texto reescrevendo as palavras em letra minúscula. Para testar sua função, você pode utilizar os dois poemas abaixo, cuja saída esperada é: ['and', 'are', 'is'] \n",
+    "Crie uma função que, dado dois textos, retorne uma __lista__ (que pode ser vazia) em ordem lexicográfica com as palavras que ocorrem em ambos. A função não deve ser case sensitive, nesse caso, transforme todo o texto reescrevendo as palavras em letra minúscula. Para testar sua função, você pode utilizar os dois poemas abaixo, cuja saída esperada é: ['and', 'are', 'is', 'you'] \n",
     "\n",
     "_The rose is a rose,  \n",
     "And was always a rose.  \n",
@@ -58,9 +58,10 @@
     "\n",
     "\n",
     "__Dicas:__  \n",
-    "não se preocupe em remover a pontuação do texto.  \n",
-    "a função sorted(lista) ordena em ordem crescente (ou lexicográfica) uma lista qualquer.  \n",
-    "a função string.lower() tranforma todos os caracteres da string em letra minúscula.  \n",
+    "1. não se preocupe em remover a pontuação do texto.  \n",
+    "1. a função sorted(lista) ordena em ordem crescente (ou lexicográfica) uma lista qualquer.  \n",
+    "1. a função string.lower() tranforma todos os caracteres da string em letra minúscula.  \n",
+    "1. use `re.sub(r'[^\\w]','',word.lower())` para tirar a pontuação de uma palavra: 'you.' -> 'you'\n",
     "\n",
     "__TADs__\n",
     "1. Python contém um tipo `set` que guarda elementos únicos.\n",
@@ -69,11 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "metadata": {
     "deletable": false,
     "nbgrader": {
-     "checksum": "31312d48986a1958e6530f89395ef427",
+     "checksum": "fc9314f86f1b79257a07e03a0b3bdb5e",
      "grade": false,
      "grade_id": "cell1-a00",
      "locked": false,
@@ -100,10 +101,14 @@
     "sugar is sweet,\n",
     "And so are you.\"\"\"\n",
     "\n",
+    "import re\n",
+    "\n",
     "def common_words(text1, text2):\n",
     "    list = []\n",
     "    for tx1 in text1.split():\n",
+    "        tx1 = re.sub(r'[^\\w]','',tx1.lower())\n",
     "        for tx2 in text2.split(): \n",
+    "            tx2 = re.sub(r'[^\\w]','',tx2.lower())\n",
     "            if tx1.lower() == tx2.lower():\n",
     "                if tx1.lower() not in list:\n",
     "                    list.append(tx1.lower())\n",
@@ -113,12 +118,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "metadata": {
     "deletable": false,
     "editable": false,
     "nbgrader": {
-     "checksum": "f65041673d62d352095cdfaa0dd3e476",
+     "checksum": "3412e5928e483d1be56c207127fe2a45",
      "grade": true,
      "grade_id": "cell1t1-a00",
      "locked": true,
@@ -129,7 +134,7 @@
    },
    "outputs": [],
    "source": [
-    "from numpy.testing import assert_equal\n",
+    "from numpy.testing import *\n",
     "\"\"\"Check that common_words returns the correct output for several inputs\"\"\"\n",
     "\n",
     "poem1 = \"\"\"The rose is a rose,\n",
@@ -148,7 +153,7 @@
     "sugar is sweet,\n",
     "And so are you.\"\"\"\n",
     "\n",
-    "assert_equal(common_words(poem1, poem2), ['and', 'are', 'is'])"
+    "assert_equal(common_words(poem1, poem2), ['and', 'are', 'is', 'you'])"
    ]
   },
   {
@@ -203,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -231,12 +236,12 @@
     "        if(phrase[x] not in d): trad += phrase[x]\n",
     "        else: trad += d[phrase[x]]\n",
     "        if(x != len(phrase)-1): trad += ' '\n",
-    "    return trad"
+    "    return trad\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -312,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -331,8 +336,8 @@
     "player_salary = [81.5, 29, 23.5, 20.8, 25.5, 27.5, 126, 22.2, 26, 22.5, 44, 22, 96, 23.55, 28.2, 22.2, 25.3, 26.8, 23, 26]\n",
     "\n",
     "\n",
-    "def sort_lists(list2, list1):\n",
-    "    join = list(zip(list1, list2))\n",
+    "def sort_lists(list1, list2):\n",
+    "    join = list(zip(list2, list1))\n",
     "    join.sort(reverse = True)\n",
     "    for x in range (len(join)):\n",
     "        if(join[x-1][0] == join[x][0]):\n",
@@ -346,16 +351,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "metadata": {
     "deletable": false,
     "editable": false,
     "nbgrader": {
-     "checksum": "fe0089947c3efe56be62d083888b54b6",
+     "checksum": "7bb39f98cc1931d235b52c457254d7a8",
      "grade": true,
      "grade_id": "cell-82d1e69f4a30f889",
      "locked": true,
-     "points": 0,
+     "points": 1,
      "schema_version": 1,
      "solution": false
     }
@@ -377,11 +382,11 @@
     "deletable": false,
     "editable": false,
     "nbgrader": {
-     "checksum": "a8848153beb5dd34bfbf768da76ca6b0",
+     "checksum": "15676778b508eac45795485f299e7443",
      "grade": true,
      "grade_id": "cell-df6952de2c0dcfc3",
      "locked": true,
-     "points": 0,
+     "points": 1,
      "schema_version": 1,
      "solution": false
     }
@@ -418,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -447,16 +452,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 68,
    "metadata": {
     "deletable": false,
     "editable": false,
     "nbgrader": {
-     "checksum": "d47a25babbb1bfb581ac85a1377a8564",
+     "checksum": "c142b2212f416fd45b155b3cc8698368",
      "grade": true,
      "grade_id": "cell-fa0332fa64ee56dc",
      "locked": true,
-     "points": 0,
+     "points": 1,
      "schema_version": 1,
      "solution": false
     }
@@ -475,11 +480,11 @@
     "deletable": false,
     "editable": false,
     "nbgrader": {
-     "checksum": "063fee6cf530c3b7a3f9e74085f8cd60",
+     "checksum": "554abbd1b0f60cca66e117f962da04b1",
      "grade": true,
      "grade_id": "cell-45249f4339f07aa8",
      "locked": true,
-     "points": 0,
+     "points": 1,
      "schema_version": 1,
      "solution": false
     }
@@ -532,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 69,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -547,7 +552,6 @@
    "outputs": [],
    "source": [
     "def medmult(X, Y):\n",
-    "    \n",
     "    mult = X@Y\n",
     "    arr = np.array(mult.reshape(1,4))\n",
     "    tamanho = len(sum(arr))\n",
@@ -557,16 +561,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 70,
    "metadata": {
     "deletable": false,
     "editable": false,
     "nbgrader": {
-     "checksum": "b9e1abb294da3350e0a8d654a7d9973c",
+     "checksum": "34dd79f462191efd0e203536abfa1dc9",
      "grade": true,
      "grade_id": "cell-b91c763e84aeda96",
      "locked": true,
-     "points": 0,
+     "points": 1,
      "schema_version": 1,
      "solution": false
     }
@@ -585,11 +589,11 @@
     "deletable": false,
     "editable": false,
     "nbgrader": {
-     "checksum": "5337c2d1d80037c6b5e993d17af7f406",
+     "checksum": "17403cc888d2f6ad5dac0d32e84044f3",
      "grade": true,
      "grade_id": "cell-16fd7395e0e257d4",
      "locked": true,
-     "points": 0,
+     "points": 1,
      "schema_version": 1,
      "solution": false
     }
